--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,20 @@ button:hover {
   background-color: #7f5af0;
   color: #fff;
 }
+
+.card-grid {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 20px;
+}
+
+.card {
+  border: 1px solid red;
+}
+
+.front,
+.back {
+  height: 200px;
+  width: 200px;
+}
