--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -7,8 +7,8 @@ img {
   display: block;
   border: 2px solid #fff;
   border-radius: 6px;
-  height: 200px;
-  width: 200px;
+  height: 180px;
+  width: 180px;
 }
 
 .front {
@@ -17,15 +17,27 @@ img {
 }
 
 .back {
-  height: 240px;
-  width: 240px;
+  height: 220px;
+  width: 220px;
 }
 
 .card .front {
   transform: rotateY(90deg);
+  transition: all ease-in 0.2s;
   position: absolute;
 }
 
 .flipped .front {
   transform: rotateY(0deg);
+  transition-delay: 0.2s;
+}
+
+.card .back {
+  transition: all ease-in 0.2s;
+  transition-delay: 0.2s;
+}
+
+.flipped .back {
+  transform: rotateY(90deg);
+  transition-delay: 0s;
 }
